tests/Project2/student_test/test_2_s07.out
Error type 3 at Line 2: redefined variable
Error type 5 at Line 2: unmatching type on both sides of assignment
Error type 3 at Line 3: redefined variable