tests/Project2/student_test/test_2_s07.spl
int test_4(){
    int redefined1, definde, redefined1, redefined2, error_type = 'c', array[2];
    int redefined2;
    definde = 1;
    array[0] = 1;
}
